gcc/testsuite/rust/rustc/ui/coroutine/yield-outside-coroutine-issue-78653_dg.rs
#![feature(coroutines)]

fn main() {
    yield || for i in 0 { }
// { dg-error ".E0277." "" { target *-*-* } .-1 }
// { dg-error ".E0277." "" { target *-*-* } .-2 }
// { dg-error ".E0277." "" { target *-*-* } .-3 }
}

